[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MiniMap.gd" type="Script" id=1]
[ext_resource path="res://src/Textures/UI/Minimap/Mimimap_planet.png" type="Texture" id=2]
[ext_resource path="res://src/Textures/UI/Minimap/Minimap_Frame.png" type="Texture" id=3]
[ext_resource path="res://src/Textures/BlackTexture.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MinimapBackground.gd" type="Script" id=5]
[ext_resource path="res://RobotoSlab-VariableFont_wght1.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/Textures/UI/Minimap/Mimimap_stargate.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 6 )

[node name="MiniMap" type="MarginContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -195.0
margin_bottom = 195.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="NinePatchRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 190.0
margin_bottom = 190.0
texture = ExtResource( 3 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 10
patch_margin_bottom = 11

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 190.0
margin_bottom = 190.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 180.0
margin_bottom = 180.0
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
script = ExtResource( 5 )

[node name="PlanetMarker" type="Sprite" parent="MarginContainer/Background"]
visible = false
position = Vector2( 54.8066, 58.2714 )
texture = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="MarginContainer/Background/PlanetMarker"]
visible = false

[node name="Label" type="Label" parent="MarginContainer/Background/PlanetMarker/Node2D"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.5
margin_top = -26.4882
margin_right = 94.5
margin_bottom = -12.4882
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StargateMarker" type="Sprite" parent="MarginContainer/Background"]
visible = false
position = Vector2( 54.8066, 58.2714 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="Node2D" type="Node2D" parent="MarginContainer/Background/StargateMarker"]
visible = false

[node name="Label" type="Label" parent="MarginContainer/Background/StargateMarker/Node2D"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.5
margin_top = -26.4882
margin_right = 94.5
margin_bottom = -12.4882
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarMarker" type="Sprite" parent="MarginContainer/Background"]
visible = false
position = Vector2( 23.9385, 86.6196 )
texture = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="MarginContainer/Background/StarMarker"]
visible = false

[node name="Label" type="Label" parent="MarginContainer/Background/StarMarker/Node2D"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -121.5
margin_top = -25.6473
margin_right = 121.5
margin_bottom = -10.6473
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMarker" type="Sprite" parent="MarginContainer/Background"]
position = Vector2( 90, 90 )
scale = Vector2( 0.05, 0.05 )
z_as_relative = false
texture = ExtResource( 2 )

[connection signal="gui_input" from="." to="." method="_on_MiniMap_gui_input"]
